Closed Bug 1884635 Opened 4 months ago Closed 4 months ago

[macOS] XUL notification does not stay frontmost

Categories

(Core :: Widget: Cocoa, defect)

Desktop
macOS
defect

Tracking

()

VERIFIED FIXED
125 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox123 --- wontfix
firefox124 --- wontfix
firefox125 --- verified

People

(Reporter: atrif, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

Found in

  • 125.0a1 (2024-03-10)

Affected versions

  • 125.0a1 (2024-03-10)
  • 124.0b9
  • 123.0.1

Tested platforms

  • Affected platforms: macOS 12, 14
  • Unaffected platforms: Windows 10x64, Windows 11 (fixed by bug 1883370)

Preconditions

  • set alerts.useSystemBackend=false

Steps to reproduce

  1. Open https://www.bennish.net/web-notifications.html
  2. Click Authorize and then Show
  3. Bring some other window over the notification and see if it goes behind the window

Expected result

  • The notification does not hide beside other windows.

Actual result

  • Notification does not stay frontmost.

Regression range

Additional notes

  • Attached a screen recording.
See Also: → 1883370

:emilio, since you are the author of the regressor, bug 1870512, could you take a look?

For more information, please visit BugBot documentation.

Flags: needinfo?(emilio)

No behavior change. Mostly fixing clang-tidy nits and using dot for
property accesses, which is a bit more readable.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Flags: needinfo?(emilio)

This was roughly what happened via the popup menu level before the
regressing bug.

Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/81ef5d400f99
Misc nsCocoaWindow clean-ups. r=mac-reviewers,bradwerth
https://hg.mozilla.org/integration/autoland/rev/723cfc34519f
Make alert windows appear over other app windows. r=mac-reviewers,bradwerth
Component: Layout → Widget: Cocoa
Status: ASSIGNED → RESOLVED
Closed: 4 months ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch

The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox124 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(emilio)
Flags: needinfo?(emilio)

Verified fixed with Firefox 125.0a1 (2024-03-17) on macOS 12 and macOS 13 by using steps from comment 0.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: