Bug 1884635 - Make alert windows appear over other app windows. r=mac-reviewers,bradwerth

This was roughly what happened via the popup menu level before the
regressing bug.

Differential Revision: https://phabricator.services.mozilla.com/D204219